--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,29 +1,140 @@
-#game-container {
-  width: 400px;
-  margin: 100px auto;
-  background-color: green;
+html {
+  height: 100%;
+  background: linear-gradient(to bottom, #398235 0%,#8ab66b 75%,#c9de96 100%);
   color: white;
-  text-align: center;
-  padding: 10px;
+  font-family: arial;
 }
 
-#game-container button {
+#main-content {
+  margin-top: 120px;
+}
+
+form {
+  vertical-align: middle;
+}
+
+img {
+  width: 80px;
+  position: absolute;
+  left: 50%;
+  margin-left: -40px;
+  top: 20px;
+}
+
+#game-container {
+  height: 400px;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 1.7em;
+}
+
+h2 {
+  font-size: 1.1em;
+}
+
+h1, h2 {
+  text-align: center;
+  font-family: 'Russo One', sans-serif;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px #000000;
+}
+
+#submit {
+  color: white;
+  margin-left: 20px;
+  height: 50px;
+  width: 150px;
+  border-radius: 4px;
+  border: 2px solid white;
+  background-color: transparent;
+  font-size: 1.2em;
+  position: relative;
+  top: 50%;
+  transform: translateY(-15%);
+}
+
+#reset {
   color: black;
-  margin-left: 5px;
+  margin-top: 10px;
+  height: 50px;
+  width: 150px;
+  border-radius: 4px;
+  background-color: white;
+  font-size: 1.2em;
 }
 
 #game-container input {
-  color: black;
+  -webkit-appearance: none;
+  color: white;
+  width: 50px;
+  height: 65px;
+  font-size: 2.5em;
+  background-color: transparent;
+  border: 2px solid white;
+}
+
+#fewest-guess {
+  clear: both;
+}
+
+#guess-box {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#user-guesses {
+  margin-top: 10px;
 }
 
 ul {
   list-style: none;
   padding-left: 0px;
+  float: left;
+}
+
+li {
+  float: left;
+  margin-left: 15px;
 }
 
 #message {
   font-style: italic;
+  font-family: 'Russo One', sans-serif;
+  letter-spacing: 1px;
   font-size: 1.5em;
-  margin-top: 10px;
+  margin-top: 25px;
   margin-bottom: 10px;
+  text-shadow: 2px 2px #000000;
+}
+
+@media (min-width: 768px) {
+
+  img {
+    width: 200px;
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    top: 20px;
+  }
+
+  h1 {
+    font-size: 2.4em;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  #main-content {
+    margin-top: 250px;
+  }
+
+
+
+
 }
