--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,32 +1,89 @@
-html {
-  height: 100%;
-  background: linear-gradient(to bottom, #398235 0%,#8ab66b 75%,#c9de96 100%);
+html, body {
   color: white;
   font-family: verdana;
+  margin: 0;
+  height: 100%;
 }
 
-#main-content {
-  margin-top: 120px;
+#container {
+  background: linear-gradient(to bottom right, #ff6666 30%, deepskyblue);
+  min-height: 100%;
+}
+
+#app {
+  overflow: hidden;
+  min-height: 100vh;
+  transition: background .6s ease;
+}
+
+.hot {
+  background: #ff6666 !important;
+}
+
+.cold {
+  background: deepskyblue !important;
 }
 
 form {
   vertical-align: middle;
 }
 
-img {
+#fire-wrapper {
   width: 80px;
   position: absolute;
-  left: 50%;
-  margin-left: -40px;
-  top: 20px;
+  left: -80px;
+  top: 8px;
+  transition: left .5s ease;
+}
+
+.fire-move-in {
+  left: 50% !important;
+  margin-left: -80px;
+}
+
+#ice-wrapper {
+  width: 80px;
+  position: absolute;
+  right: -80px;
+  top: 27px;
+  transition: right .5s ease .3s;
+}
+
+.ice-move-in {
+  right: 50% !important;
+  margin-right: -80px;
+}
+
+.bounce {
+  animation-name: bounce;
+  animation-duration: 1s;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+  40% {transform: translateY(-30px);} 
+  60% {transform: translateY(-15px);} 
+} 
+
+img {
+  width: 100%;
 }
 
 #game-container {
-  height: 400px;
   margin: auto;
   text-align: center;
   padding: 10px;
   border-radius: 10px;
+  opacity: 0;
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+#header {
+  margin-top: 140px;
+  opacity: 0;
+  transform: scale(1.2);
+  transition: all .6s ease;
 }
 
 h1 {
@@ -102,15 +159,12 @@ h1, h2 {
   text-shadow: 2px 2px #000000;
 }
 
-@media (min-width: 768px) {
+.show {
+  opacity: 1 !important;
+  transform: scale(1) !important;
+}
 
-  img {
-    width: 200px;
-    position: absolute;
-    left: 50%;
-    margin-left: -100px;
-    top: 20px;
-  }
+@media (min-width: 768px) {
 
   h1 {
     font-size: 2.4em;
@@ -118,10 +172,6 @@ h1, h2 {
 
   h2 {
     font-size: 1.8em;
-  }
-
-  #main-content {
-    margin-top: 250px;
   }
 
 }
