--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,12 +8,15 @@ html, body {
 #container {
   background: linear-gradient(to bottom right, #ff6666 30%, deepskyblue);
   min-height: 100%;
+  box-sizing: border-box;
 }
 
 #app {
   overflow: hidden;
   min-height: 100vh;
   transition: background .6s ease;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .hot {
@@ -28,41 +31,63 @@ form {
   vertical-align: middle;
 }
 
+#characters-wrapper {
+  position: relative;
+  margin-top: 5%;
+}
+
 #fire-wrapper {
-  width: 80px;
-  position: absolute;
-  left: -80px;
-  top: 8px;
+  position: relative;
   transition: left .5s ease;
+  width: 20%;
+  left: -20%;
+  top: 0;
 }
 
 .fire-move-in {
   left: 50% !important;
-  margin-left: -80px;
+  margin-left: -22%;
 }
 
 #ice-wrapper {
-  width: 80px;
   position: absolute;
-  right: -80px;
-  top: 27px;
   transition: right .5s ease .3s;
+  width: 20%;
+  right: -20%;
+  top: 0;
 }
 
 .ice-move-in {
   right: 50% !important;
-  margin-right: -80px;
+  margin-right: -22%;
 }
 
-.bounce {
-  animation-name: bounce;
-  animation-duration: 1s;
+.bounce-right {
+  animation-name: bounceR;
+  animation-duration: .4s;
+  animation-iteration-count: 1;
 }
 
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-  40% {transform: translateY(-30px);} 
-  60% {transform: translateY(-15px);} 
+@keyframes bounceR {
+  0% {transform: translateY(0);} 
+  20% {transform: rotate(10deg);}
+  25% {transform: translateY(5px);}
+  95% {transform: translateY(-30px);}
+  100% {transform: translateY(0);} 
+} 
+
+.bounce-left {
+  animation-name: bounceL;
+  animation-duration: .4s;
+  animation-iteration-count: 1;
+}
+
+@keyframes bounceL {
+  0% {transform: translateY(0);} 
+  20% {transform: rotate(-10deg);}
+  25% {transform: translateY(5px);}
+  95% {transform: translateY(-30px);}
+  100% {transform: translateY(0);} 
 } 
 
 img {
@@ -75,12 +100,12 @@ img {
   padding: 10px;
   border-radius: 10px;
   opacity: 0;
-  transform: scale(1.2);
-  transition: all 1s ease;
+  transform: scale(2);
+  transition: all .3s ease-out;
 }
 
 #header {
-  margin-top: 140px;
+/*  margin-top: 140px;*/
   opacity: 0;
   transform: scale(1.2);
   transition: all .6s ease;
