--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,11 +12,11 @@ html, body {
 
 #app {
   min-height: 100vh;
+  transition: background .6s ease .3s;
 }
 
 #game {
   max-width: 1000px;
-  transition: background .6s ease;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
@@ -55,7 +55,7 @@ form {
 
 #ice-wrapper {
   position: absolute;
-  transition: right .5s ease .3s;
+  transition: right .5s ease .4s;
   width: 20%;
   right: -20%;
   top: 0;
@@ -69,29 +69,29 @@ form {
 
 .bounce-right {
   animation-name: bounceR;
-  animation-duration: .4s;
+  animation-duration: .5s;
   animation-iteration-count: 1;
 }
 
 @keyframes bounceR {
   0% {transform: translateY(0);} 
-  20% {transform: rotate(10deg);}
-  25% {transform: translateY(5px);}
-  95% {transform: translateY(-30px);}
+  20% {transform: rotate(18deg);}
+  25% {transform: translateY(10px);}
+  80% {transform: translateY(-30px);}
   100% {transform: translateY(0);} 
 } 
 
 .bounce-left {
   animation-name: bounceL;
-  animation-duration: .4s;
+  animation-duration: .5s;
   animation-iteration-count: 1;
 }
 
 @keyframes bounceL {
   0% {transform: translateY(0);} 
-  20% {transform: rotate(-10deg);}
-  25% {transform: translateY(5px);}
-  95% {transform: translateY(-30px);}
+  20% {transform: rotate(-18deg);}
+  25% {transform: translateY(10px);}
+  80% {transform: translateY(-30px);}
   100% {transform: translateY(0);} 
 } 
 
@@ -194,7 +194,7 @@ h1, h2 {
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255,255,255,0.25);
   border-radius: 10px;
   padding: 20px;
   transition: max-height 2s ease;
