input mobile padding, spin

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,6 +221,10 @@ h1, h2 {
   transform: scale(1) !important;
 }
 
+.slow-spin {
+  animation: fa-spin 5s infinite linear;
+}
+
 @media (min-width: 768px) {
 
   h1 {
