--- a/src/css/style.css
+++ b/src/css/style.css
@@ -320,6 +320,16 @@ h1, h2 {
   animation: fa-spin 5s infinite linear;
 }
 
+.fewest {
+  animation: fewest 1s linear infinite;
+}
+
+@keyframes fewest {
+  0% {transform: scale(1);}
+  50% {transform: scale(1.3);}
+  100% {transform: scale(1);}
+}
+
 @media (min-width: 768px) {
 
   h1 {
